--- a/src/main/resources/template/Controller.java.vm
+++ b/src/main/resources/template/Controller.java.vm
@@ -1,22 +1,16 @@
 package ${package}.${moduleName}.controller;
 
-import java.util.List;
 import java.util.Map;
 
-import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.bind.annotation.PathVariable;
 
-import ${package}.${moduleName}.entity.${className}Entity;
 import ${package}.${moduleName}.service.${className}Service;
-import ${mainPath}.base.common.utils.PageUtils;
-import ${mainPath}.base.common.utils.Query;
-import ${mainPath}.base.common.utils.CommonResponse;
+import com.chisondo.server.common.http.CommonReq;
+import com.chisondo.server.common.http.CommonResp;
 
 
 
@@ -38,62 +32,8 @@ public class ${className}Controller {
 	 * 列表
 	 */
 	@PostMapping("/list")
-	@RequiresPermissions("${moduleName}:${pathName}:list")
-	public CommonResponse list(@RequestBody Map<String, Object> params){
-		//查询列表数据
-        Query query = new Query(params);
+	public CommonResp list(@RequestBody Map<String, Object> params){
+        return new CommonResp();
+	}
 
-		List<${className}Entity> ${classname}List = ${classname}Service.queryList(query);
-		int total = ${classname}Service.queryTotal(query);
-		
-		PageUtils pageUtil = new PageUtils(${classname}List, total, query.getLimit(), query.getPage());
-		
-		return CommonResponse.ok().put("page", pageUtil);
-	}
-	
-	
-	/**
-	 * 信息
-	 */
-	@GetMapping("/info/{${pk.attrname}}")
-	@RequiresPermissions("${moduleName}:${pathName}:info")
-	public CommonResponse info(@PathVariable("${pk.attrname}") ${pk.attrType} ${pk.attrname}){
-		${className}Entity ${classname} = ${classname}Service.queryObject(${pk.attrname});
-		
-		return CommonResponse.ok().put("${classname}", ${classname});
-	}
-	
-	/**
-	 * 保存
-	 */
-	@PostMapping("/save")
-	@RequiresPermissions("${moduleName}:${pathName}:save")
-	public CommonResponse save(@RequestBody ${className}Entity ${classname}){
-		${classname}Service.save(${classname});
-		
-		return CommonResponse.ok();
-	}
-	
-	/**
-	 * 修改
-	 */
-	@PostMapping("/update")
-	@RequiresPermissions("${moduleName}:${pathName}:update")
-	public CommonResponse update(@RequestBody ${className}Entity ${classname}){
-		${classname}Service.update(${classname});
-		
-		return CommonResponse.ok();
-	}
-	
-	/**
-	 * 删除
-	 */
-	@PostMapping("/delete")
-	@RequiresPermissions("${moduleName}:${pathName}:delete")
-	public CommonResponse delete(@RequestBody ${pk.attrType}[] ${pk.attrname}s){
-		${classname}Service.deleteBatch(${pk.attrname}s);
-		
-		return CommonResponse.ok();
-	}
-	
 }
